Fixed alignment issue in desktop-mode

--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,9 @@ header {
 }
 
 main {
+    width: 90%;
     max-width: 1200px;
-    margin: 5rem;
+    margin: 0 auto;
 }
 
 section {
@@ -327,6 +328,10 @@ nav ul li a {
     nav {
         display: block
     }
+    main {
+        width: 75%;
+        margin: 0 auto;
+    }
 }
 
 
@@ -334,6 +339,16 @@ nav ul li a {
 
     html {
         font-size: calc(2*62.5%);
+    }
+
+    header {
+        width: fit-content;
+        margin: 1rem auto;
+    }
+
+    main {
+        width: 60%;
+        margin: 0 auto;
     }
 
     .header-img.hamburger {
